cluster/apps/bitwarden/bitwarden-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitwarden
  labels:
    goldilocks.fairwinds.com/enabled: "true"
