cluster/apps/bitwarden/statefulset.yaml
---
apiVersion: "apps/v1"
kind: StatefulSet
metadata:
  name: bitwarden
  namespace: bitwarden
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    service: bitwarden
spec:
  serviceName: bitwarden
  replicas: 1
  selector:
    matchLabels:
      service: bitwarden
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: bitwarden
    spec:
      serviceAccountName: bitwarden
      securityContext:
        fsGroup: 33
        runAsUser: 33
      containers:
        - image: vaultwarden/server:1.37.3
          imagePullPolicy: IfNotPresent
          name: bitwarden
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 3012
              name: websocket
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: bitwarden-data
          resources:
            requests:
              cpu: 20m
              memory: 160Mi
            limits:
              memory: 256Mi
      nodeSelector:
        kubernetes.io/arch: amd64
      volumes:
        - name: bitwarden-data
          persistentVolumeClaim:
            claimName: bitwarden-data
