cluster/apps/bitwarden/bitwarden-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    service: bitwarden
spec:
  type: ClusterIP
  selector:
    service: bitwarden
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: websocket
    protocol: TCP
    port: 3012
    targetPort: 3012
